Project

General

Profile

Actions

Bug #8019

closed

Some PV devices should not be configured in HVM mode

Added by Prakash Surya about 6 years ago. Updated about 6 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
kernel
Start date:
2017-03-31
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:

Description

When booting a Xen VM in HVM mode we can see the `/var/adm/messages`
file is being spammed with the following messages:

May 16 07:01:06 delphix genunix: [ID 408114 kern.info] /xpvd/xencons@0 (xencons0) offline
May 16 07:01:06 delphix genunix: [ID 408114 kern.info] /xpvd/xenbus@0 (xenbus0) offline
May 16 07:01:06 delphix genunix: [ID 408114 kern.info] /xpvd/domcaps@0 (domcaps0) offline
May 16 07:01:06 delphix genunix: [ID 408114 kern.info] /xpvd/balloon@0 (balloon0) offline

This is happening because we are trying to configure Xen PV devices that
aren't available while in HVM mode. The configuration of these devices
fails which causes us to to send a sysevent announcing that the event is
offline. This sysevent is being processed by devfsadm and causes it to
update it's device topology snapshot. Updating the device topology
causes xpvd to try and reconfigure its devices so we end up in an
infinite loop.

Actions #1

Updated by Electric Monk about 6 years ago

  • Status changed from New to Closed
  • % Done changed from 0 to 100

git commit 3599414c808350f34f7facca641b720233836743

commit  3599414c808350f34f7facca641b720233836743
Author: Jeremy Jones <jeremy@delphix.com>
Date:   2017-04-28T14:04:40.000Z

    8019 Some PV devices should not be configured in HVM mode
    Reviewed by: Paul Dagnelie <pcd@delphix.com>
    Reviewed by: Basil Crow <basil.crow@delphix.com>
    Approved by: Dan McDonald <danmcd@omniti.com>

Actions

Also available in: Atom PDF