8019 Some PV devices should not be configured in HVM mode Reviewed by: Paul Dagnelie <pcd@delphix.com> Reviewed by: Basil Crow <basil.crow@delphix.com> Approved by: Dan McDonald <danmcd@omniti.com>